fix: update code styling for better visibility
- Changed background color and border for code elements to improve aesthetics.
- Added box-shadow for enhanced input appearance.
- Adjusted margin for better spacing.

--- a/src/assets/scss/base/_generic.scss
+++ b/src/assets/scss/base/_generic.scss
@@ -123,10 +123,10 @@ strong {
 code {
   font-family: var(--typographic-monospace-font-family) !important;
   font-size: 0.875em;
-  background-color: rgba(var(--color-primary-rgb), 0.08);
-  color: var(--color-primary);
-  border: 2px solid rgba(var(--color-primary-rgb), 0.2);
+  box-shadow: var(--r95-shadow-input);
+  border: 2px solid transparent;
   padding: 0.15em 0.4em;
+  margin-inline: 0.15em;
 }
 
 ul {
